--- a/BetBros.Server/Pages/Leaderboard.razor
+++ b/BetBros.Server/Pages/Leaderboard.razor
@@ -119,7 +119,7 @@
 
                                     <MudStack Spacing="1">
                                         <MudText Typo="Typo.body2">
-                                            <strong>Antal spel:</strong> @stats.TotalBets
+                                            <strong>Antal matcher:</strong> @stats.TotalBets
                                         </MudText>
                                         <MudDivider Class="my-2" />
                                         <MudText Typo="Typo.body2">
